--- a/Site/html/options/cadastro.html
+++ b/Site/html/options/cadastro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Site/css/style.css" />
+    <link rel="stylesheet" href="/Site/css//responsive/style-reponsive.css">
     <link rel="shortcut icon" href="/Site/img/logo1.svg" type="image/x-icon" />
     <title>Cis-Aluno</title>
   </head>
