--- a/Site/html/options/login.html
+++ b/Site/html/options/login.html
@@ -4,18 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/Site/css/style.css" />
+    <link rel="stylesheet" href="/Site/css//responsive/style-reponsive.css">
     <link rel="shortcut icon" href="/Site/img/logo1.svg" type="image/x-icon" />
-    <style>
-      .text{
-        gap: 1%;
-      }
-      .text p{
-        font-size: 4.5vh;
-      }
-      .text h1{
-        font-size: 11vh;
-      }
-    </style>
     <title>Cis-Aluno</title>
   </head>
   <body>
@@ -30,7 +20,18 @@
       </div>
       <div class="text">
         <h1>Welcome to Aluno-System</h1>
-        <p>Aguarde enquanto carregamos seu <br />Banco de Dados</p>
+        <h2>Escolha uma das opções de loggin:</h2>
+        <a href="/Site/html/login/aluno.html">
+          <button id="btn">Aluno</button>
+        </a>
+        <a href="/Site/html/login/professor.html">
+          <button id="btn-x">Professor</button>
+        </a>
+        <p>
+          Não tem uma Conta?<a href="/Site/html/options/cadastro.html">
+            Cadastre-Se</a
+          >
+        </p>
       </div>
     </main>
   </body>
