--- a/Site/html/login/professor.html
+++ b/Site/html/login/professor.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="logo1">
-      <a href="/Site/html/index.html">
+      <a href="/Site/html/options/login.html">
         <img src="/Site/img/logo1.svg" alt="" />
       </a>
     </div>
