--- a/Site/html/options/cadastro.html
+++ b/Site/html/options/cadastro.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="logo1">
-      <a href="/Site/html/index.html">
+      <a href="/Site/html/options/login.html">
         <img src="/Site/img/logo1.svg" alt="" />
       </a>
     </div>
@@ -28,7 +28,7 @@
           <button id="btn-x">Professor</button>
         </a>
         <p>
-          Já possui uma Conta?<a href="/Site/html/index.html"> Faça login</a>
+          Já possui uma Conta?<a href="/Site/html/options/login.html"> Faça login</a>
         </p>
       </div>
     </main>
